--- a/software/src/omaha/templates/index.html
+++ b/software/src/omaha/templates/index.html
@@ -17,6 +17,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/starter-template.css" rel="stylesheet">
+    <script src="/css/handlers.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -42,7 +43,9 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Hello, Projet Omaha</h1>
+        <h1>Hello, Project Omaha</h1>
+        <button type="button" class="btn btn-success btn-lg" onclick="startDemo()">start</button>
+        <button type="button" class="btn btn-danger btn-lg">stop</button>
       </div>
 
     </div><!-- /.container -->
