--- a/software/src/omaha/templates/index.html
+++ b/software/src/omaha/templates/index.html
@@ -45,7 +45,7 @@
       <div class="starter-template">
         <h1>Hello, Project Omaha</h1>
         <button type="button" class="btn btn-success btn-lg" onclick="startDemo()">start</button>
-        <button type="button" class="btn btn-danger btn-lg">stop</button>
+        <button type="button" class="btn btn-danger btn-lg" onclick="stopDemo()">stop</button>
       </div>
 
     </div><!-- /.container -->
