updated demo styling

--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -59,9 +59,10 @@
           @apply(--layout-vertical)
         }
 
-        volume-selector {
+        volume-selector, light-controller {
           margin-top: 20px;
         }
+
       }
 
     </style>
