--- a/software/src/omaha/templates/app.html
+++ b/software/src/omaha/templates/app.html
@@ -10,7 +10,7 @@
 
   <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
-  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <!--<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>-->
   <link rel="import" href="/components/omaha-app.html">
 
   <link rel="stylesheet" href="/css/styles.css">
