--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -10,7 +10,7 @@
 <link rel="import" href="/components/test-controller.html">
 <link rel="import" href="/components/volume-selector.html">
 <link rel="import" href="/components/light-controller.html">
-
+<!--<link rel="import" href="/components/map-controller.html">-->
 <dom-module id="audio-controller">
   <template>
     <style>
@@ -81,6 +81,7 @@
         <!-- <volume-selector volume="21"></volume-selector>-->
         <light-controller style="display: none;" id="light"></light-controller>
         <volume-selector id="volume" volume="21"></volume-selector>
+        <!-- <map-controller></map-controller>-->
       </div>
     </div>
   </template>
