--- a/software/src/omaha/templates/components/light-controller.html
+++ b/software/src/omaha/templates/components/light-controller.html
@@ -7,6 +7,8 @@
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-styles/paper-styles.html">
+<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+
 <dom-module id="light-controller">
   <template>
     <style>
@@ -63,16 +65,26 @@
         <paper-button id="off" on-click="_offPressed">off</paper-button>
       </div>
     </paper-card>
+    <iron-ajax
+      id="ledOnAjax"
+      url="/demo/start"
+      handle-as="json"
+      on-response="_logResponse"
+      debounce-duration="300"></iron-ajax>
+    <iron-ajax
+      id="ledOffAjax"
+      url="/demo/stop"
+      handle-as="json"
+      on-response="_logResponse"
+      debounce-duration="300"></iron-ajax>
+    <iron-ajax
+      id="ledStatusAjax"
+      url="/demo/status"
+      handle-as="json"
+      on-response="_initializeStatus"
+      debounce-duration="300"></iron-ajax>
   </template>
   <script>
-    $.post("/demo/status", function(data) {
-      if(data == 1) {
-        this._onPressed();
-      } else {
-        this._offPressed();
-      }
-      console.log(data);
-    })
     Polymer({
       is: 'light-controller',
 
@@ -80,17 +92,31 @@
         this.$.day.style.display = "block";
         this.$.night.style.display = "none";
 
-        $.post("/demo/start", function(data) {
-          console.log(data);
-        });
+        this.$.ledOnAjax.generateRequest();
       },
 
       _offPressed: function() {
         this.$.day.style.display = "none";
         this.$.night.style.display = "block";
-        $.post("/demo/stop", function(data) {
-          console.log(data);
-        });
+        this.$.ledOffAjax.generateRequest();
+      },
+
+      _logResponse: function(event, data) {
+        console.log(data.response);
+      },
+
+      _initializeStatus: function(event, data) {
+        console.log(data.response)
+        if(data.response == 1) {
+          this._onPressed();
+        } else {
+          this._offPressed();
+        }
+      },
+
+      ready: function() {
+        var elem = this;
+        this.$.ledStatusAjax.generateRequest();
       }
 
     });
