Added a map controller and updated the UI to serve multiple pages

--- a/software/src/omaha/templates/app.html
+++ b/software/src/omaha/templates/app.html
@@ -17,6 +17,6 @@
 </head>
 
 <body unresolved style="height: 100%;">
-  <omaha-app class="fullbleed layout vertical"></omaha-app>
+  <omaha-app class="fullbleed layout vertical" selected="0"></omaha-app>
 </body>
 </html>
