--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -6,6 +6,7 @@
 <link rel="import" href="/bower_components/neon-animation/neon-animated-pages.html">
 <link rel="import" href="/bower_components/neon-animation/neon-animatable.html">
 <link rel="import" href="/bower_components/neon-animation/neon-animations.html">
+<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 
 <link rel="import" href="/components/test-controller.html">
 <link rel="import" href="/components/volume-selector.html">
@@ -67,7 +68,7 @@
 
     </style>
     <div id="radio-container" class="layout horizontal">
-      <paper-radio-group id="mode" selected="volume">
+      <paper-radio-group id="mode">
         <paper-radio-button name="volume" class="flex">Volume</paper-radio-button>
         <paper-radio-button name="light" class="flex">LED</paper-radio-button>
       </paper-radio-group>
@@ -79,8 +80,10 @@
           <neon-animatable>2</neon-animatable>
         </neon-animated-pages>-->
         <!-- <volume-selector volume="21"></volume-selector>-->
-        <light-controller style="display: none;" id="light"></light-controller>
-        <volume-selector id="volume" volume="21"></volume-selector>
+        <iron-pages id="pages">
+          <light-controller id="light"></light-controller>
+          <volume-selector id="volume" volume="21"></volume-selector>
+        </iron-pages>
         <!-- <map-controller></map-controller>-->
       </div>
     </div>
@@ -90,18 +93,21 @@
       is: 'audio-controller',
 
       listeners: {
-        "iron-select": "_selectionChanged"
+         "mode.iron-select": "_selectionChanged"
       },
 
       _selectionChanged: function(event) {
         var selected = this.$.mode.selected;
         if(selected === "volume") {
-          this.$.light.style.display = "none";
-          this.$.volume.style.display = "block";
+          this.$.pages.select(1);
         } else {
-          this.$.light.style.display = "block";
-          this.$.volume.style.display = "none";
+          this.$.pages.select(0);
         }
+      },
+
+      ready: function() {
+        this.$.mode.selected = "volume";
+        this.$.pages.selected = "1"
       }
     });
   </script>
