--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -3,10 +3,12 @@
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
 <link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
-
+<link rel="import" href="/bower_components/paper-drawer-panel/paper-drawer-panel.html">
+<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 
 <link rel="import" href="/components/omaha-navbar.html">
 <link rel="import" href="/components/audio-controller.html">
+<link rel="import" href="/components/map-controller.html">
 
 <dom-module id="omaha-app">
   <template>
@@ -27,15 +29,29 @@
         }
       }
     </style>
-    
-    <paper-header-panel class="flex" mode="seamed">
-      <omaha-navbar class="paper-header"></omaha-navbar>
-      <audio-controller id="test" volume="21" class="fit"></audio-controller>
-    </paper-header-panel>
+        <paper-header-panel class="flex" mode="seamed">
+          <omaha-navbar id="nav" selected="{{selected}}" class="paper-header"></omaha-navbar>
+          <iron-pages id="app-pages" selected="{{selected}}">
+            <audio-controller id="test" volume="21" class="fit"></audio-controller>
+            <map-controller class="fit"></map-controller>
+          </iron-pages>
+          <!-- <audio-controller id="test" volume="21" class="fit"></audio-controller> -->
+        </paper-header-panel>
   </template>
   <script>
     Polymer({
-      is: 'omaha-app'
+      is: 'omaha-app',
+
+      listeners: {
+        "nav.iron-select": "_test"
+      },
+
+      _test: function(x,y,z) {
+        console.log(x);
+        console.log(y);
+        console.log(z);
+        console.log("just testing");
+      }
     });
   </script>
 </dom-module>
