updated UI with animations

--- a/software/src/omaha/templates/components/omaha-navbar.html
+++ b/software/src/omaha/templates/components/omaha-navbar.html
@@ -20,7 +20,7 @@
             <paper-item>Map</paper-item>
           </paper-menu>
         </paper-menu-button>
-        <div>Project Omaha</div>
+        <div class="title">Project Omaha</div>
       </paper-toolbar>
   </template>
   <script>
