--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -28,7 +28,7 @@
       }
       
       volume-selector {
-        width: 40%;
+        width: 30%;
         min-width: 300px;
       }
 
@@ -73,20 +73,37 @@
         <paper-radio-button name="light" class="flex">LED</paper-radio-button>
       </paper-radio-group>
     </div>
-    <div class="container layout horizontal center">
-      <div class="container layout vertical center">
-        <!-- <neon-animated-pages id="pages" selected="0" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
-          <neon-animatable><div style="height: 100px;"></div></neon-animatable>
-          <neon-animatable>2</neon-animatable>
-        </neon-animated-pages>-->
-        <!-- <volume-selector volume="21"></volume-selector>-->
-        <iron-pages id="pages">
+    <neon-animated-pages id="pages" class="flex" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+      <div class="container layout horizontal center">
+        <div class="container layout vertical center">
+          <!-- <neon-animated-pages id="pages" selected="0" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+            <neon-animatable><div style="height: 100px;"></div></neon-animatable>
+            <neon-animatable>2</neon-animatable>
+          </neon-animated-pages>-->
+          <!-- <volume-selector volume="21"></volume-selector>-->
+          <!--<iron-pages id="pages">-->
           <light-controller id="light"></light-controller>
-          <volume-selector id="volume" volume="21"></volume-selector>
-        </iron-pages>
-        <!-- <map-controller></map-controller>-->
+
+
+
+          <!-- <map-controller></map-controller>-->
+        </div>
       </div>
-    </div>
+      <div class="container layout horizontal center">
+        <div class="container layout vertical center">
+          <!-- <neon-animated-pages id="pages" selected="0" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+            <neon-animatable><div style="height: 100px;"></div></neon-animatable>
+            <neon-animatable>2</neon-animatable>
+          </neon-animated-pages>-->
+          <!-- <volume-selector volume="21"></volume-selector>-->
+          <!--<iron-pages id="pages">-->
+          <volume-selector id="volume" volume="21"></volume-selector>
+
+
+          <!-- <map-controller></map-controller>-->
+        </div>
+      </div>
+    </neon-animated-pages>
   </template>
   <script>
     Polymer({
@@ -106,8 +123,8 @@
       },
 
       ready: function() {
-        this.$.mode.selected = "volume";
-        this.$.pages.selected = "1"
+        this.$.mode.selected = "light";
+        this.$.pages.selected = "0"
       }
     });
   </script>
