--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -73,7 +73,8 @@
         <paper-radio-button name="light" class="flex">LED</paper-radio-button>
       </paper-radio-group>
     </div>
-    <neon-animated-pages id="pages" class="flex" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+    <neon-animated-pages id="pages" class="flex">
+      <neon-animatable class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
       <div class="container layout horizontal center">
         <div class="container layout vertical center">
           <!-- <neon-animated-pages id="pages" selected="0" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
@@ -89,6 +90,8 @@
           <!-- <map-controller></map-controller>-->
         </div>
       </div>
+      </neon-animatable>
+      <neon-animatable class="horizontal layout" entry-animation="slide-from-left-animation" exit-animation="slide-left-animation">
       <div class="container layout horizontal center">
         <div class="container layout vertical center">
           <!-- <neon-animated-pages id="pages" selected="0" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
@@ -103,6 +106,7 @@
           <!-- <map-controller></map-controller>-->
         </div>
       </div>
+      </neon-animatable>
     </neon-animated-pages>
   </template>
   <script>
