--- a/software/src/omaha/templates/components/light-controller.html
+++ b/software/src/omaha/templates/components/light-controller.html
@@ -89,13 +89,13 @@
       is: 'light-controller',
 
       _onPressed: function(){
-        _showDay();
+        this._showDay();
 
         this.$.ledOnAjax.generateRequest();
       },
 
       _offPressed: function() {
-        _showNight();
+        this._showNight();
         this.$.ledOffAjax.generateRequest();
       },
 
