changed the code to show scott how to handle javascript input

--- a/software/src/omaha/templates/login.html
+++ b/software/src/omaha/templates/login.html
@@ -7,19 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Web Components -->
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js">
-    </script>
+    <!--<script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js">
+    </script>-->
     <!-- Imports will go here -->
-    <link rel="import" href="/bower_components/paper-material/paper-material.html">
+    <!-- <link rel="import" href="/bower_components/paper-material/paper-material.html">
     <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
     <link rel="import" href="/components/login-form.html">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css"> -->
+
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   </head>
   <body unresolved>
     <div class="full-container layout horizontal">
-      <paper-material class="flex self-center card" elevation="5">
+      <!-- <paper-material class="flex self-center card" elevation="5">
         <login-form></login-form>
-      </paper-material>
+      </paper-material> -->
+      hello
     </div>
   </body>
 </html>
