--- a/software/src/omaha/templates/components/light-controller.html
+++ b/software/src/omaha/templates/components/light-controller.html
@@ -79,7 +79,7 @@
       debounce-duration="300"></iron-ajax>
     <iron-ajax
       id="ledStatusAjax"
-      url="/demo/status"
+      url="/system/status/"
       handle-as="json"
       on-response="_initializeStatus"
       debounce-duration="300"></iron-ajax>
@@ -114,8 +114,8 @@
       },
 
       _initializeStatus: function(event, data) {
-        console.log(data.response)
-        if(data.response == 1) {
+        console.log(data.response.status.ledOn)
+        if(data.response.status.ledOn) {
           this._showDay();
         } else {
           this._showNight();
