--- a/software/src/omaha/templates/components/light-controller.html
+++ b/software/src/omaha/templates/components/light-controller.html
@@ -79,7 +79,7 @@
       debounce-duration="300"></iron-ajax>
     <iron-ajax
       id="ledStatusAjax"
-      url="/system/status/"
+      url="/system/"
       handle-as="json"
       on-response="_initializeStatus"
       debounce-duration="300"></iron-ajax>
