--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -7,6 +7,7 @@
 <link rel="import" href="/components/test-controller.html">
 <link rel="import" href="/components/volume-selector.html">
 <link rel="import" href="/components/light-controller.html">
+<link rel="import" href="/components/averaging-controller.html">
 <!--<link rel="import" href="/components/map-controller.html">-->
 <dom-module id="audio-controller">
   <template>
@@ -66,6 +67,7 @@
     <div id="radio-container" class="layout horizontal">
       <paper-radio-group selected="{{mode}}" id="mode">
         <paper-radio-button name="volume" class="flex">Volume</paper-radio-button>
+        <paper-radio-button name="averaging" class="flex">Averaging</paper-radio-button>
         <paper-radio-button name="light" class="flex">LED</paper-radio-button>
       </paper-radio-group>
     </div>
@@ -80,13 +82,28 @@
           <!-- <volume-selector volume="21"></volume-selector>-->
           <!--<iron-pages id="pages">-->
           <light-controller id="light"></light-controller>
-
-
-
           <!-- <map-controller></map-controller>-->
         </div>
       </div>
       </neon-animatable>
+
+
+      <neon-animatable class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
+      <div class="container layout horizontal center">
+        <div class="container layout vertical center">
+          <!-- <neon-animated-pages id="pages" selected="0" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+            <neon-animatable><div style="height: 100px;"></div></neon-animatable>
+            <neon-animatable>2</neon-animatable>
+          </neon-animated-pages>-->
+          <!-- <volume-selector volume="21"></volume-selector>-->
+          <!--<iron-pages id="pages">-->
+          <averaging-controller id="averaging"></averaging-controller>
+          <!-- <map-controller></map-controller>-->
+        </div>
+      </div>
+      </neon-animatable>
+
+
       <neon-animatable class="horizontal layout" entry-animation="slide-from-left-animation" exit-animation="slide-left-animation">
       <div class="container layout horizontal center">
         <div class="container layout vertical center">
@@ -124,10 +141,23 @@
       _selectionChanged: function(event) {
         
         var selected = this.mode;
-        if(selected === "volume") {
-          this.page = 1;
-        } else {
-          this.page = 0;
+
+        switch(selected) {
+
+          case "light":
+            this.page = 0;
+            break;
+
+          case "averaging":
+            this.page = 1;
+            break;
+
+          case "volume":
+            this.page = 2;
+            break;
+
+          default:
+            break;
         }
       }
     });
