fixed averaging controller

--- a/software/src/omaha/templates/components/averaging-controller.html
+++ b/software/src/omaha/templates/components/averaging-controller.html
@@ -55,7 +55,7 @@
       }
     </style>
 
-  <paper-dropdown-menu always-float-label="true" label="Averaging mode:">
+  <paper-dropdown-menu label="Averaging mode:">
     <paper-menu id="menu" class="dropdown-content">
       <paper-item>Mode 1</paper-item>
       <paper-item>Mode 2</paper-item>
