MAX if you see this I need some help. I'm trying to set something up in omaha-navbar.html for our demo on Tuesday

--- a/software/src/omaha/templates/components/omaha-navbar.html
+++ b/software/src/omaha/templates/components/omaha-navbar.html
@@ -17,6 +17,8 @@
           <paper-menu class="dropdown-content" selected="{{selected}}">
             <paper-item>Controllers</paper-item>
             <paper-item>Map</paper-item>
+            <paper-item>Speaker 1</paper-item>
+            <paper-item>Speaker 2</paper-item>
           </paper-menu>
         </paper-menu-button>
         <div class="title">Project Omaha</div>
@@ -31,7 +33,11 @@
           type: Number,
           notify: true
         }
+
+        //console.log(selected);
       }
+
+      //console.log(selected);
     });
   </script>
 </dom-module>
