--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -26,12 +26,15 @@
           @apply(--layout-vertical)
         }
       }
+
     </style>
         <paper-header-panel class="flex" mode="seamed">
           <omaha-navbar id="nav" selected="{{selected}}" class="paper-header"></omaha-navbar>
           <iron-pages id="app-pages" selected="{{selected}}">
             <audio-controller id="test" volume="21" class="fit"></audio-controller>
             <map-controller class="fit"></map-controller>
+            <audio-controller id="s1" volume="21" class="fit"></audio-controller>
+            <audio-controller id="s2" volume="21" class="fit"></audio-controller>
           </iron-pages>
           <!-- <audio-controller id="test" volume="21" class="fit"></audio-controller> -->
         </paper-header-panel>
@@ -45,6 +48,11 @@
       },
 
       _test: function(x,y,z) {
+
+        if(selected == "s1") {
+          console.log("this is not a drill!!!");
+        }
+
         console.log(x);
         console.log(y);
         console.log(z);
