updated omaha-app properties

--- a/software/src/omaha/templates/app.html
+++ b/software/src/omaha/templates/app.html
@@ -18,6 +18,6 @@
 
 <body unresolved style="height: 100%;">
   
-  <omaha-app class="fullbleed layout vertical" selected="0"></omaha-app>
+  <omaha-app class="fullbleed layout vertical"></omaha-app>
 </body>
 </html>
