--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -42,6 +42,15 @@
     Polymer({
       is: 'omaha-app',
 
+      properties: {
+        volume: Number,
+        
+        selected: {
+          type: Number,
+          value: 1
+        }
+      },
+
       listeners: {
         "nav.iron-select": "_test"
       },
