--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -71,7 +71,7 @@
         this.$.setVolumeAjax.body = {
           "updatedAttributes": updatedAttributes, 
           "attributeValues": attributeValues, 
-          "speaker": this.speakerIdclcl
+          "speaker": this.speakerId
         };
         this.$.setVolumeAjax.generateRequest();
       },
